--- a/Bayesian Model.ipynb
+++ b/Bayesian Model.ipynb
@@ -5522,7 +5522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a5bfab",
+   "id": "73688090",
    "metadata": {},
    "source": [
     "### 5.2.1. Causal Inference Queries\n",
@@ -5533,99 +5533,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5609ffcf",
+   "id": "a23c5a17",
    "metadata": {},
    "outputs": [],
    "source": [
-    " #--------Inference CPT representations--------\n",
+    "#variables:\n",
+    "query_variable = 'famsup'\n",
+    "evidence_variables = dict({\"Medu\": 4,\"Fedu\": 4})\n",
     "\n",
-    "#Inferences:\n",
-    "q4_1 = approx_infer.query([\"famsup\"], evidence={\"Medu\": 4,\"Fedu\": 4}) \n",
-    "q4_2 = approx_infer.query([\"famsup\"], evidence={\"Medu\": 1,\"Fedu\": 1})\n",
-    "q4_3 = approx_infer.query([\"famsup\"], evidence={\"Medu\": 4,\"Fedu\": 1}) \n",
-    "q4_4 = approx_infer.query([\"famsup\"], evidence={\"Medu\": 1,\"Fedu\": 4})\n",
-    "\n",
-    "\n",
-    "#Print CPTs:\n",
-    "print(f\"- Case 1: \\tMedu = 4 & Fedu = 4\\n\\n {q4_1}\")\n",
-    "print(f\"\\n\\n- Case 2: \\tMedu = 1 & Fedu = 1\\n\\n {q4_2}\")\n",
-    "print(f\"\\n\\n- Case 3: \\tMedu = 4 & Fedu = 1\\n\\n {q4_3}\")\n",
-    "print(f\"\\n\\n- Case 4: \\tMedu = 1 & Fedu = 4\\n\\n {q4_4}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "#------------Plotting the PDFs------------\n",
-    "\n",
-    "\n",
-    "#Setting y values of first dictionary:\n",
-    "diz1 = dict({\"\": 0,\n",
-    "             \"no\": q4_1.values[0]*100,\n",
-    "             \"yes\": q4_1.values[1]*100,\n",
-    "             \" \": 0\n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Setting y values of second dictionary:\n",
-    "diz2 = dict({\"\": 0,\n",
-    "             \"no\": q4_2.values[0]*100,\n",
-    "             \"yes\": q4_2.values[1]*100,\n",
-    "             \" \": 0\n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Setting y values of third dictionary:\n",
-    "diz3 = dict({\"\": 0,\n",
-    "             \"no\": q4_3.values[0]*100,\n",
-    "             \"yes\": q4_3.values[1]*100,\n",
-    "             \" \": 0\n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Setting y values of fourth dictionary:\n",
-    "diz4 = dict({\"\": 0,\n",
-    "             \"no\": q4_4.values[0]*100,\n",
-    "             \"yes\": q4_4.values[1]*100,\n",
-    "             \" \": 0\n",
-    "             \n",
-    "            })\n",
-    "\n",
-    "#Variables to plot PDFs:\n",
-    "rows = 2\n",
-    "cols = 2\n",
-    "titles = ['Parents with very high education level',\n",
-    "          'Parents with very low education level',\n",
-    "          'Parents with unbalance education level (Medu >>Fedu)',\n",
-    "          'Parents with unbalance education level (Fedu >>Medu)'\n",
-    "         ]\n",
-    "\n",
-    "pdf_legends = ['Medu = 4 & Fedu = 4', \n",
-    "              'Medu = 1 & Fedu = 1', \n",
-    "              'Medu = 4 & Fedu = 1', \n",
-    "              'Medu = 1 & Fedu = 4',]\n",
-    "\n",
-    "figsize = (15,10)\n",
-    "diz = [diz1, diz2, diz3, diz4]\n",
-    "x_ticklabels = [\" \", \n",
-    "                \"No\", \n",
-    "                \"Yes\", \n",
-    "                \" \"\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "#plot all the PDFs:\n",
-    "print(\"\\nPDFs in percentage format:\")\n",
-    "plot_pdf(rows = rows,\n",
-    "         cols = cols,\n",
-    "         titles = titles,\n",
-    "         pdf_legends = pdf_legends,\n",
-    "         figsize = figsize,\n",
-    "         x_ticklabels = x_ticklabels, \n",
-    "         diz = diz)"
+    "#Approximate inference:\n",
+    "for i in samples_num:\n",
+    "    q = approx_infer.query([query_variable], \n",
+    "                            i, \n",
+    "                            evidence_variables)\n",
+    "    \n",
+    "    print(f'Conditional Probability Table of variable \"{query_variable}\" given that \"{evidence_variables}\" are observed:')\n",
+    "    print(f'\\n\\tNumber of samples used to compute the approximate inference:\\t{i}')\n",
+    "    print(f'\\n\\tConditional Probability Table:\\n\\t{q}')    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15563223",
+   "id": "7d0345b1",
    "metadata": {},
    "source": [
     "### 5.2.2. Intercausal Inference Queries\n",
@@ -5636,116 +5565,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb012120",
+   "id": "a3ea5cf7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#--------Inference CPT representations--------\n",
+    "#variables:\n",
+    "query_variable = 'absences'\n",
+    "evidence_variables = dict({\"G3\": 'Suficiente', \"studytime\": 1})\n",
     "\n",
-    "#Inferences:\n",
-    "q7_1 = approx_infer.query([\"absences\"], evidence={\"G3\": 'Suficiente', \"studytime\": 1})\n",
-    "q7_2 = approx_infer.query([\"absences\"], evidence={\"G3\": 'Suficiente', \"studytime\": 4})\n",
-    "q7_3 = approx_infer.query([\"absences\"], evidence={\"G3\": 'Excelente', \"studytime\": 1})\n",
-    "q7_4 = approx_infer.query([\"absences\"], evidence={\"G3\": 'Excelente', \"studytime\": 4})\n",
-    "\n",
-    "\n",
-    "#Print CPTs:\n",
-    "print(f\"- Case 1: \\tG3 = 'Suficiente' & studytime = 1\\n\\n {q7_1}\")\n",
-    "print(f\"\\n\\n- Case 2: \\tG3 = 'Suficiente' & studytime = 4\\n\\n {q7_2}\")\n",
-    "print(f\"\\n\\n- Case 3: \\tG3 = 'Excelente' & studytime = 1\\n\\n {q7_3}\")\n",
-    "print(f\"\\n\\n- Case 4: \\tG3 = 'Excelente' & studytime = 4\\n\\n {q7_4}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "#------------Plotting the PDFs------------\n",
-    "\n",
-    "#x axis tick labels:\n",
-    "x_ticklabels = [\"0-10\",\n",
-    "                \"11-20\", \n",
-    "                \"21-30\", \n",
-    "                \"+30\"\n",
-    "               ]\n",
-    "\n",
-    "#Setting y values of first dictionary:\n",
-    "diz1 = dict({\"+30\" : q7_1.values[0]*100,\n",
-    "             \"0-10\" : q7_1.values[1]*100,\n",
-    "             \"11-20\" : q7_1.values[2]*100,\n",
-    "             \"21-30\" : q7_1.values[3]*100             \n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Reordering first dictionary:\n",
-    "diz1 = {k: diz1[k] for k in x_ticklabels}\n",
-    "\n",
-    "\n",
-    "#Setting y values of second dictionary:\n",
-    "diz2 = dict({\"+30\" : q7_2.values[0]*100,\n",
-    "             \"0-10\" : q7_2.values[1]*100,\n",
-    "             \"11-20\" : q7_2.values[2]*100,\n",
-    "             \"21-30\" : q7_2.values[3]*100             \n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Reordering first dictionary:\n",
-    "diz2 = {k: diz2[k] for k in x_ticklabels}\n",
-    "\n",
-    "\n",
-    "#Setting y values of third dictionary:\n",
-    "diz3 = dict({\"+30\" : q7_3.values[0]*100,\n",
-    "             \"0-10\" : q7_3.values[1]*100,\n",
-    "             \"11-20\" : q7_3.values[2]*100,\n",
-    "             \"21-30\" : q7_3.values[3]*100             \n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Reordering first dictionary:\n",
-    "diz3 = {k: diz3[k] for k in x_ticklabels}\n",
-    "\n",
-    "\n",
-    "#Setting y values of fourth dictionary:\n",
-    "diz4 = dict({\"+30\" : q7_4.values[0]*100,\n",
-    "             \"0-10\" : q7_4.values[1]*100,\n",
-    "             \"11-20\" : q7_4.values[2]*100,\n",
-    "             \"21-30\" : q7_4.values[3]*100             \n",
-    "            })\n",
-    "            \n",
-    "\n",
-    "#Reordering first dictionary:\n",
-    "diz4 = {k: diz4[k] for k in x_ticklabels}\n",
-    "\n",
-    "            \n",
-    "#Variables to plot PDFs:\n",
-    "rows = 2\n",
-    "cols = 2\n",
-    "titles = [' ',\n",
-    "          ' ',\n",
-    "          ' ',\n",
-    "          ' '\n",
-    "         ]\n",
-    "\n",
-    "pdf_legends = [\"G3 = 'Suficiente' & studytime = 1\",\n",
-    "               \"G3 = 'Suficiente' & studytime = 4\",\n",
-    "               \"G3 = 'Excelente' & studytime = 1\",\n",
-    "               \"G3 = 'Excelente' & studytime = 4\"\n",
-    "              ]\n",
-    "\n",
-    "figsize = (15,10)\n",
-    "diz = [diz1, diz2, diz3, diz4]\n",
-    "\n",
-    "#plot all the PDFs:\n",
-    "print(\"\\nPDFs in percentage format:\")\n",
-    "plot_pdf(rows = rows,\n",
-    "         cols = cols,\n",
-    "         titles = titles,\n",
-    "         pdf_legends = pdf_legends,\n",
-    "         figsize = figsize,\n",
-    "         x_ticklabels = x_ticklabels, \n",
-    "         diz = diz)approx_infer"
+    "#Approximate inference:\n",
+    "for i in samples_num:\n",
+    "    q = approx_infer.query([query_variable], \n",
+    "                            i, \n",
+    "                            evidence_variables)\n",
+    "    \n",
+    "    print(f'Conditional Probability Table of variable \"{query_variable}\" given that \"{evidence_variables}\" are observed:')\n",
+    "    print(f'\\n\\tNumber of samples used to compute the approximate inference:\\t{i}')\n",
+    "    print(f'\\n\\tConditional Probability Table:\\n\\t{q}')    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4b5ab3e9",
+   "id": "4a1d0a61",
    "metadata": {},
    "source": [
     "### 5.2.3 Evidential Inference Queries\n",
@@ -5756,100 +5597,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a10867b",
+   "id": "d7553eba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#--------Inference CPT representations--------\n",
+    "#variables:\n",
+    "query_variable = 'studytime'\n",
+    "evidence_variables = dict({\"G3\": \"Suficiente\"})\n",
     "\n",
-    "\n",
-    "#Inferences:approx_infer\n",
-    "q5_1 = approx_infer.query([\"studytime\"],evidence={\"G3\": \"Mau\"})\n",
-    "q5_2 = approx_infer.query([\"studytime\"],evidence={\"G3\": \"Suficiente\"})\n",
-    "q5_3 = approx_infer.query([\"studytime\"],evidence={\"G3\": \"Mediocre\"})\n",
-    "q5_4 = approx_infer.query([\"studytime\"],evidence={\"G3\": \"Mui bom distincao\"})\n",
-    "\n",
-    "\n",
-    "#Print CPTs:\n",
-    "print(f\"- Case 1: \\tFinal Grade = 'Mau'\\n\\n {q5_1}\")\n",
-    "print(f\"\\n\\n- Case 2: \\tFinal Grade = 'Suficiente'\\n\\n {q5_2}\")\n",
-    "print(f\"\\n\\n- Case 3: \\tFinal Grade = 'Mediocre'\\n\\n {q5_3}\")\n",
-    "print(f\"\\n\\n- Case 4: \\tFinal Grade = 'Mui bom distincao'\\n\\n {q5_4}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "#------------Plotting the PDFs------------\n",
-    "\n",
-    "\n",
-    "#Setting y values of first dictionary:\n",
-    "diz1 = dict({1: q5_1.values[0]*100,\n",
-    "             2: q5_1.values[1]*100,\n",
-    "             3: q5_1.values[2]*100,\n",
-    "             4: q5_1.values[3]*100\n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Setting y values of second dictionary:\n",
-    "diz2 = dict({1: q5_2.values[0]*100,\n",
-    "             2: q5_2.values[1]*100,\n",
-    "             3: q5_2.values[2]*100,\n",
-    "             4: q5_2.values[3]*100\n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Setting y values of third dictionary:\n",
-    "diz3 = dict({1: q5_3.values[0]*100,\n",
-    "             2: q5_3.values[1]*100,\n",
-    "             3: q5_3.values[2]*100,\n",
-    "             4: q5_3.values[3]*100\n",
-    "            })\n",
-    "\n",
-    "\n",
-    "#Setting y values of fourth dictionary:\n",
-    "diz4 = dict({1: q5_4.values[0]*100,\n",
-    "             2: q5_4.values[1]*100,\n",
-    "             3: q5_4.values[2]*100,\n",
-    "             4: q5_4.values[3]*100\n",
-    "            })\n",
-    "\n",
-    "#Variables to plot PDFs:\n",
-    "rows = 2\n",
-    "cols = 2\n",
-    "titles = [' ',\n",
-    "          ' ',\n",
-    "          ' ',\n",
-    "          ' '\n",
-    "         ]\n",
-    "\n",
-    "pdf_legends = ['Final Grade = \"Mau\"',\n",
-    "               'Final Grade = \"Suficiente\"',\n",
-    "               'Final Grade = \"Mediocre\"',\n",
-    "               'Final Grade = \"Mui bom distincao\"']\n",
-    "\n",
-    "figsize = (15,10)\n",
-    "diz = [diz1, diz2, diz3, diz4]\n",
-    "x_ticklabels = ['1',\n",
-    "                '2', \n",
-    "                '3', \n",
-    "                '4'\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "#plot all the PDFs:\n",
-    "print(\"\\nPDFs in percentage format:\")\n",
-    "plot_pdf(rows = rows,\n",
-    "         cols = cols,\n",
-    "         titles = titles,\n",
-    "         pdf_legends = pdf_legends,\n",
-    "         figsize = figsize,\n",
-    "         x_ticklabels = x_ticklabels, \n",
-    "         diz = diz)"
+    "#Approximate inference:\n",
+    "for i in samples_num:\n",
+    "    q = approx_infer.query([query_variable], \n",
+    "                            i, \n",
+    "                            evidence_variables)\n",
+    "    \n",
+    "    print(f'Conditional Probability Table of variable \"{query_variable}\" given that \"{evidence_variables}\" are observed:')\n",
+    "    print(f'\\n\\tNumber of samples used to compute the approximate inference:\\t{i}')\n",
+    "    print(f'\\n\\tConditional Probability Table:\\n\\t{q}') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f51b11",
+   "id": "be2cc2b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a18e2a5",
    "metadata": {},
    "outputs": [],
    "source": []
