--- a/Bayesian Model.ipynb
+++ b/Bayesian Model.ipynb
@@ -7339,7 +7339,7 @@
     "    \n",
     "#     print(f'Conditional Probability Table of variable \"{query_variable}\" given that \"{evidence_variables}\" are observed:')\n",
     "#     print(f'\\n\\tNumber of samples used to compute the approximate inference:\\t{i}')\n",
-    "#     print(f'\\n\\tConditional Probability Table:\\n\\t{q8}')    "
+    "#     print(f'\\n\\tConditional Probability Table:\\n\\t{q8}')    \n"
    ]
   },
   {
