END PROJECT matt

--- a/BayesianModel_Albarello_Nestola.ipynb
+++ b/BayesianModel_Albarello_Nestola.ipynb
@@ -3946,11 +3946,7 @@
     "- ***Bayesian Estimator***, which uses already existing prior conditional probability tables in order to compute the CPDs.\n",
     "\n",
     "\n",
-    "QUALE ESTIMATORE USIAMO E PERCHÉ?\n",
-    "\n",
-    "... \n",
-    "\n",
-    "So we decided to go with MLE, the estimator used by default by the .fit() function\n",
+    "So we decided to go with Bayesian Estimator, the estimator used by default by the .fit() function\n",
     "\n",
     "Once the *CPDs* have been computed correctly, we can represent them in *Conditional Probability Distributions*."
    ]
