--- a/BayesianModel_Albarello_Nestola.ipynb
+++ b/BayesianModel_Albarello_Nestola.ipynb
@@ -28,6 +28,100 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e644235",
+   "metadata": {},
+   "source": [
+    "<p id=\"index\"></p>\n",
+    "\n",
+    "## Index\n",
+    "\n",
+    "1. <a href = \"#preprocessing\"><u>*Preprocessing of the data*</u></a>\n",
+    "\n",
+    "    1.1 <a href = \"#dropping_columns\"><u>*Dropping columns*</u></a>\n",
+    "    \n",
+    "    1.2 <a href = \"#discretizing_age\"><u>*Discretizing age*</u></a>\n",
+    "    \n",
+    "    1.3 <a href = \"#discretizing_G3\"><u>*Discretizing G3*</u></a>\n",
+    "    \n",
+    "    1.4 <a href = \"#discretizing_absences\"><u>*Discretizing absences*</u></a>\n",
+    "    \n",
+    "    1.5 <a href = \"#discretizing_results\"><u>*Discretizing results*</u></a>\n",
+    "\n",
+    "\n",
+    "\n",
+    "2. <a href = \"#data_exploration\"><u>*Data Exploration*</u></a>\n",
+    "\n",
+    "    2.1 <a href = \"#Pstatus_famrel\"><u>*Pstatus $\\rightarrow$ famrel*</u></a>\n",
+    "    \n",
+    "    2.2 <a href = \"#famrel_famsup\"><u>*Famrel $\\rightarrow$ famsup*</u></a>\n",
+    "    \n",
+    "    2.3 <a href = \"#famrel_Dalc\"><u>*Famrel $\\rightarrow$ Dalc*</u></a>\n",
+    "    \n",
+    "    2.4 <a href = \"#Medu/Fedu_famsup\"><u>*Medu/Fedu $\\rightarrow$ famsup*</u></a>\n",
+    "    \n",
+    "    2.5 <a href = \"#famsup_paid\"><u>*Famsup $\\rightarrow$ paid*</u></a>\n",
+    "    \n",
+    "    2.6 <a href = \"#paid_G3\"><u>*Paid $\\rightarrow$ G3*</u></a>\n",
+    "    \n",
+    "    2.7 <a href = \"#freetime_goout\"><u>*Freetime $\\rightarrow$ goout*</u></a>\n",
+    "    \n",
+    "    2.8 <a href = \"#freetime_activities\"><u>*Freetime $\\rightarrow$ activities*</u></a>\n",
+    "\n",
+    "    2.9 <a href = \"#goout_studytime\"><u>*Goout $\\rightarrow$ studytime*</u></a>\n",
+    "    \n",
+    "    2.10 <a href = \"#activities_studytime\"><u>*Activities $\\rightarrow$ studytime*</u></a>\n",
+    "    \n",
+    "    2.11 <a href = \"#famsup_studytime\"><u>*Famsup $\\rightarrow$ studytime*</u></a>\n",
+    "    \n",
+    "    2.12 <a href = \"#Dalc_studytime\"><u>*Dalc $\\rightarrow$ studytime*</u></a>\n",
+    "    \n",
+    "    2.13 <a href = \"#health_studytime\"><u>*Health $\\rightarrow$ studytime*</u></a>\n",
+    "    \n",
+    "    2.14 <a href = \"#schoolsup_studytime\"><u>*Schoolsup $\\rightarrow$ studytime*</u></a>\n",
+    "    \n",
+    "    2.15 <a href = \"#age_G3\"><u>*Age $\\rightarrow$ G3*</u></a>\n",
+    "    \n",
+    "    2.16 <a href = \"#sex_G3\"><u>*Sex $\\rightarrow$ G3*</u></a>\n",
+    "\n",
+    "    2.17 <a href = \"#absences_G3\"><u>*Absences $\\rightarrow$ G3*</u></a>\n",
+    "    \n",
+    "    2.18 <a href = \"#famsup_G3 \"><u>*Famsup $\\rightarrow$ G3*</u></a>\n",
+    "    \n",
+    "    2.19 <a href = \"#studytime_G3\"><u>*Studytime $\\rightarrow$ G3*</u></a>\n",
+    "    \n",
+    "    \n",
+    "3. <a href = \"#bnia\"><u>*Bayesian Network Implementation and Analysis*</u></a>\n",
+    "\n",
+    "    3.1 <a href = \"#Dalc_block\"><u>*Dalc block*</u></a>\n",
+    "    \n",
+    "    3.2 <a href = \"#Famsup_block\"><u>*Famsup block*</u></a>\n",
+    "    \n",
+    "    3.3 <a href = \"#Freetime_block\"><u>*Freetime block*</u></a>\n",
+    "    \n",
+    "    3.4 <a href = \"#Studytime_block\"><u>*Studytime block*</u></a>\n",
+    "    \n",
+    "    3.5 <a href = \"#g3_block\"><u>*G3 block*</u></a>\n",
+    "    \n",
+    "    3.6 <a href = \"#resulting_network\"><u>*Resulting Network*</u></a>\n",
+    "    \n",
+    "    3.7 <a href = \"#analysis\"><u>*Analysis of the resulting network: flow of probabilistic influence*</u></a>\n",
+    "\n",
+    "\n",
+    "4. <a href = \"#parameter_estimation\"><u>*Parameter Estimation*</u></a>\n",
+    "\n",
+    "\n",
+    "5. <a href = \"#inferences\"><u>*Inferences*</u></a>\n",
+    "\n",
+    "    5.1 <a href = \"#exact_inferences\"><u>*Exact inferences*</u></a>\n",
+    "    \n",
+    "    5.2 <a href = \"#approximate_inferences\"><u>*Approximate inferences*</u></a>\n",
+    "    \n",
+    "\n",
+    "6. <a href = \"#conclusions\"><u>*Conclusions*</u></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73938a44",
    "metadata": {},
    "source": [
@@ -91,84 +185,7 @@
    "cell_type": "markdown",
    "id": "44cd95ce",
    "metadata": {},
-   "source": [
-    "<p id=\"index\"></p>\n",
-    "\n",
-    "## Index\n",
-    "\n",
-    "1. <a href = \"#preprocessing\"><u>*Preprocessing of the data*</u></a>\n",
-    "\n",
-    "\n",
-    "2. <a href = \"#data_exploration\"><u>*Data Exploration*</u></a>\n",
-    "\n",
-    "    2.1 <a href = \"#Pstatus_famrel\"><u>*Pstatus $\\rightarrow$ famrel*</u></a>\n",
-    "    \n",
-    "    2.2 <a href = \"#famrel_famsup\"><u>*Famrel $\\rightarrow$ famsup*</u></a>\n",
-    "    \n",
-    "    2.3 <a href = \"#famrel_Dalc\"><u>*Famrel $\\rightarrow$ Dalc*</u></a>\n",
-    "    \n",
-    "    2.4 <a href = \"#Medu/Fedu_famsup\"><u>*Medu/Fedu $\\rightarrow$ famsup*</u></a>\n",
-    "    \n",
-    "    2.5 <a href = \"#famsup_paid\"><u>*Famsup $\\rightarrow$ paid*</u></a>\n",
-    "    \n",
-    "    2.6 <a href = \"#paid_G3\"><u>*Paid $\\rightarrow$ G3*</u></a>\n",
-    "    \n",
-    "    2.7 <a href = \"#freetime_goout\"><u>*Freetime $\\rightarrow$ goout*</u></a>\n",
-    "    \n",
-    "    2.8 <a href = \"#freetime_activities\"><u>*Freetime $\\rightarrow$ activities*</u></a>\n",
-    "\n",
-    "    2.9 <a href = \"#goout_studytime\"><u>*Goout $\\rightarrow$ studytime*</u></a>\n",
-    "    \n",
-    "    2.10 <a href = \"#activities_studytime\"><u>*Activities $\\rightarrow$ studytime*</u></a>\n",
-    "    \n",
-    "    2.11 <a href = \"#famsup_studytime\"><u>*Famsup $\\rightarrow$ studytime*</u></a>\n",
-    "    \n",
-    "    2.12 <a href = \"#Dalc $\\rightarrow$ studytime\"><u>*Dalc $\\rightarrow$ studytime*</u></a>\n",
-    "    \n",
-    "    2.13 <a href = \"#health $\\rightarrow$ studytime\"><u>*Health $\\rightarrow$ studytime*</u></a>\n",
-    "    \n",
-    "    2.14 <a href = \"#schoolsup $\\rightarrow$ studytime\"><u>*Schoolsup $\\rightarrow$ studytime*</u></a>\n",
-    "    \n",
-    "    2.15 <a href = \"#age_G3\"><u>*Age $\\rightarrow$ G3*</u></a>\n",
-    "    \n",
-    "    2.16 <a href = \"#sex_G3\"><u>*Sex $\\rightarrow$ G3*</u></a>\n",
-    "\n",
-    "    2.17 <a href = \"#absences_G3\"><u>*Absences $\\rightarrow$ G3*</u></a>\n",
-    "    \n",
-    "    2.18 <a href = \"#famsup_G3 \"><u>*Famsup $\\rightarrow$ G3*</u></a>\n",
-    "    \n",
-    "    2.19 <a href = \"#studytime_G3\"><u>*Studytime $\\rightarrow$ G3*</u></a>\n",
-    "    \n",
-    "    \n",
-    "3. <a href = \"#bnia\"><u>*Bayesian Network Implementation and Analysis*</u></a>\n",
-    "\n",
-    "    3.1 <a href = \"#Dalc_block\"><u>*Dalc block*</u></a>\n",
-    "    \n",
-    "    3.2 <a href = \"#Famsup_block\"><u>*Famsup block*</u></a>\n",
-    "    \n",
-    "    3.3 <a href = \"#Freetime_block\"><u>*Freetime block*</u></a>\n",
-    "    \n",
-    "    3.4 <a href = \"#Studytime_block\"><u>*Studytime block*</u></a>\n",
-    "    \n",
-    "    3.5 <a href = \"#g3_block\"><u>*G3 block*</u></a>\n",
-    "    \n",
-    "    3.6 <a href = \"#resulting_network\"><u>*Resulting Network*</u></a>\n",
-    "    \n",
-    "    3.7 <a href = \"#analysis\"><u>*Analysis of the resulting network: flow of probabilistic influence*</u></a>\n",
-    "\n",
-    "\n",
-    "4. <a href = \"#parameter_estimation\"><u>*Parameter Estimation*</u></a>\n",
-    "\n",
-    "\n",
-    "5. <a href = \"#inferences\"><u>*Inferences*</u></a>\n",
-    "\n",
-    "    5.1 <a href = \"#exact_inferences\"><u>*Exact inferences*</u></a>\n",
-    "    \n",
-    "    5.2 <a href = \"#approximate_inferences\"><u>*Approximate inferences*</u></a>\n",
-    "    \n",
-    "\n",
-    "6. <a href = \"#conclusions\"><u>*Conclusions*</u></a>"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -517,6 +534,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ac13ae3",
+   "metadata": {},
+   "source": [
+    "<p id=\"dropping_columns\"></p>\n",
+    "\n",
+    "#### 1.1 Dropping columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5b351ec2",
    "metadata": {},
    "source": [
@@ -607,6 +634,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5defe7b6",
+   "metadata": {},
+   "source": [
+    "<p id=\"discretizing_age\"></p>\n",
+    "\n",
+    "#### 1.2 Discretizing age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b4004b9",
    "metadata": {},
    "source": [
@@ -614,7 +651,9 @@
     "\n",
     "- `15-17`: students that have never failed a year;\n",
     "- `18-19`: students that have failed one year;\n",
-    "- `20-22`: students that have failed many years of school."
+    "- `20-22`: students that have failed many years of school.\n",
+    "\n",
+    "<a href = \"#index\"><b>*back to the top*</b></a>"
    ]
   },
   {
@@ -737,6 +776,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a91f730",
+   "metadata": {},
+   "source": [
+    "<p id=\"discretizing_G3\"></p>\n",
+    "\n",
+    "#### 1.3 Discretizing G3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e14c2ea9",
    "metadata": {},
    "source": [
@@ -750,7 +799,11 @@
     "|14.00 - 15.99||Bom||Good|\n",
     "|10.00 - 13.99||Suficiente||Sufficient|\n",
     "|7.00 - 9.99||Mediocre||Poor|\n",
-    "|0.00 - 6.99||Mau||Poor|"
+    "|0.00 - 6.99||Mau||Poor|\n",
+    "\n",
+    "\n",
+    "\n",
+    "<a href = \"#index\"><b>*back to the top*</b></a>"
    ]
   },
   {
@@ -867,6 +920,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a62fb701",
+   "metadata": {},
+   "source": [
+    "<p id=\"discretizing_absences\"></p>\n",
+    "\n",
+    "#### 1.4 Discretizing absences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb2afa25",
    "metadata": {},
    "source": [
@@ -917,7 +980,8 @@
     "- `11-20`\n",
     "- `21-30`\n",
     "- `+30`\n",
-    "\n"
+    "\n",
+    "<a href = \"#index\"><b>*back to the top*</b></a>"
    ]
   },
   {
@@ -940,9 +1004,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab1b1e7d",
+   "metadata": {},
+   "source": [
+    "<p id=\"discretizing_results\"></p>\n",
+    "\n",
+    "#### 1.5 Results of the discretization step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bdbb2bd",
    "metadata": {},
    "source": [
+    "<a href = \"#index\"><b>*back to the top*</b></a>\n",
+    "\n",
     "Let's observe the distribution of the discretized features represented on histograms and print the new dataset's structure:"
    ]
   },
@@ -1246,9 +1322,9 @@
    "id": "f441e914",
    "metadata": {},
    "source": [
-    "### 2.1. Pstatus $\\rightarrow$ famrel\n",
+    "<p id=\"Pstatus_famrel\"></p>\n",
     "\n",
-    "<p id=\"dalc_block\"></p>\n",
+    "### 2.1. Pstatus $\\rightarrow$ famrel\n",
     "\n",
     "In our opinion, the fact that parents are together or apart affects the relation with their son/daughter.  "
    ]
@@ -1336,6 +1412,8 @@
    "id": "a56aa3cd",
    "metadata": {},
    "source": [
+    "<p id=\"famrel_famsup\"></p>\n",
+    "\n",
     "### 2.2. famrel $\\rightarrow$ famsup\n",
     "Intuitively, if a student has a good relationship with his parents, he will more likely be academically supported. "
    ]
@@ -1421,6 +1499,8 @@
    "id": "da473c58",
    "metadata": {},
    "source": [
+    "<p id=\"famrel_Dalc\"></p>\n",
+    "\n",
     "### 2.3. famrel $\\rightarrow$ Dalc \n",
     "A student that has a bad family relationship may be more prone to the possibility of drinking too much."
    ]
@@ -1506,6 +1586,8 @@
    "id": "ccc60303",
    "metadata": {},
    "source": [
+    "<p id=\"Medu/Fedu_famsup\"></p>\n",
+    "\n",
     "### 2.4. Medu/Fedu $\\rightarrow$ famsup \n",
     "\n",
     "<p id=\"famsup_block\"></p>\n",
@@ -1595,6 +1677,8 @@
    "id": "8c624679",
    "metadata": {},
    "source": [
+    "<p id=\"famsup_paid\"></p>\n",
+    "\n",
     "### 2.5. famsup $\\rightarrow$ paid \n",
     "A student that has family support in his academic carreer, morelikely will go to extra paid lessons.  "
    ]
@@ -1680,6 +1764,8 @@
    "id": "27960561",
    "metadata": {},
    "source": [
+    "<p id=\"paid_G3\"></p>\n",
+    "\n",
     "### 2.6. paid $\\rightarrow$ G3 \n",
     "A student that goes to additional paid lessons might achieve higher grades than the rest:"
    ]
@@ -1775,6 +1861,8 @@
    "id": "566ca1c0",
    "metadata": {},
    "source": [
+    "<p id=\"freetime_goout\"></p>\n",
+    "\n",
     "### 2.7. freetime $\\rightarrow$ goout \n",
     "<p id=\"freetime_block\"></p>\n",
     "A student with a lot of freetime might spend it to go out with friends:"
@@ -1861,6 +1949,8 @@
    "id": "d9afa213",
    "metadata": {},
    "source": [
+    "<p id=\"freetime_activities\"></p>\n",
+    "\n",
     "### 2.8. freetime $\\rightarrow$ activities \n",
     "a student that has a lot of free time might use it for various extracurricular activities "
    ]
@@ -1946,6 +2036,8 @@
    "id": "a716f05a",
    "metadata": {},
    "source": [
+    "<p id=\"goout_studytime\"></p>\n",
+    "\n",
     "### 2.9. goout $\\rightarrow$ studytime\n",
     "A student that goes out with his friends too much, might not have a lot of time to study left."
    ]
@@ -2031,6 +2123,8 @@
    "id": "2f9c4557",
    "metadata": {},
    "source": [
+    "<p id=\"activities_studytime\"></p>\n",
+    "\n",
     "### 2.10. activities $\\rightarrow$ studytime\n",
     "A student that participates to extracurricular activities might have less time left to study:"
    ]
@@ -2116,6 +2210,8 @@
    "id": "010baefc",
    "metadata": {},
    "source": [
+    "<p id=\"famsup_studytime\"></p>\n",
+    "\n",
     "### 2.11. famsup $\\rightarrow$ studytime \n",
     "\n",
     "<p id=\"studytime_block\"></p>\n",
@@ -2204,6 +2300,8 @@
    "id": "ac9fa503",
    "metadata": {},
    "source": [
+    "<p id=\"Dalc_studytime\"></p>\n",
+    "\n",
     "### 2.12. Dalc $\\rightarrow$ studytime \n",
     "\n",
     "Workday alcohol consumption should negatively affect the amount of studytime. Let's see if the data confirms this trend."
@@ -2290,6 +2388,8 @@
    "id": "fc081d84",
    "metadata": {},
    "source": [
+    "<p id=\"health_studytime\"></p>\n",
+    "\n",
     "### 2.13. health $\\rightarrow$ studytime \n",
     "\n",
     "Students' health conditions should affect their studytime, as a matter of fact, if a student has severe health problems, unfortunately he might not be in the conditions to study.  "
@@ -2378,6 +2478,8 @@
    "id": "731df303",
    "metadata": {},
    "source": [
+    "<p id=\"schoolsup_studytime\"></p>\n",
+    "\n",
     "### 2.14. schoolsup $\\rightarrow$ studytime \n",
     "\n",
     "Intuitively, `schoolsup` should affect the amount of studytime, because students that are supported by their school might be highly motivated to succed in their classes. "
@@ -2469,6 +2571,8 @@
    "id": "cadcd757",
    "metadata": {},
    "source": [
+    "<p id=\"age_G3\"></p>\n",
+    "\n",
     "### 2.15. age $\\rightarrow$ G3\n",
     "\n",
     "<p id=\"G3_block\"></p>\n",
@@ -2568,6 +2672,8 @@
    "id": "dd6ccddd",
    "metadata": {},
    "source": [
+    "<p id=\"sex_G3\"></p>\n",
+    "\n",
     "### 2.16. sex $\\rightarrow$ G3 \n",
     "\n",
     "Let's check if the sex of a student affects the final grade."
@@ -2666,6 +2772,8 @@
    "id": "f8603e14",
    "metadata": {},
    "source": [
+    "<p id=\"absences_G3\"></p>\n",
+    "\n",
     "### 2.17. absences $\\rightarrow$ G3\n",
     "\n",
     "The number of absences may influence the students' final grade. "
@@ -2763,6 +2871,8 @@
    "id": "b4ca714d",
    "metadata": {},
    "source": [
+    "<p id=\"famsup_G3\"></p>\n",
+    "\n",
     "### 2.18. famsup $\\rightarrow$ G3 \n",
     "A student that has a good academic support from his parents, might study with greater commitment, resulting in a better final grade. "
    ]
@@ -2859,6 +2969,8 @@
    "id": "04c03842",
    "metadata": {},
    "source": [
+    "<p id=\"studytime_G3\"></p>\n",
+    "\n",
     "### 2.19. studytime $\\rightarrow$ G3\n",
     "\n",
     "The amount of studytime of a student should positively affect his final grade. "
@@ -7214,7 +7326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -7228,7 +7340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
